# ChangeLog for dev-db/mysql
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.709 2014/12/04 01:27:44 grknight Exp $

*mysql-5.5.41 (04 Dec 2014)
*mysql-5.6.22 (04 Dec 2014)

  04 Dec 2014; Brian Evans <grknight@gentoo.org> +mysql-5.5.41.ebuild,
  +mysql-5.6.22.ebuild:
  Version bumps for 5.5 and 5.6 series

  02 Dec 2014; Brian Evans <grknight@gentoo.org> -mysql-5.6.21.ebuild,
  mysql-5.6.21-r1.ebuild:
  Fix test that was not skipped for bug 531464 ; Drop old

  23 Oct 2014; Brian Evans <grknight@gentoo.org> -mysql-5.5.39.ebuild:
  Drop old wrt security bug 525504

  23 Oct 2014; Markus Meier <maekke@gentoo.org> mysql-5.5.40.ebuild:
  arm stable, bug #525504

*mysql-5.6.21-r1 (19 Oct 2014)

  19 Oct 2014; Brian Evans <grknight@gentoo.org> +mysql-5.6.21-r1.ebuild:
  Revbump to fix mysql_config filtering and embedded libs location

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for sparc, wrt bug #525504

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for ia64, wrt bug #525504

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for ppc64, wrt bug #525504

  17 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for ppc, wrt bug #525504

  17 Oct 2014; Jeroen Roovers <jer@gentoo.org> mysql-5.5.40.ebuild:
  Stable for HPPA (bug #525504).

  16 Oct 2014; Tobias Klausmann <klausman@gentoo.org> mysql-5.5.40.ebuild:
  Stable on alpha, bug 525504

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for x86, wrt bug #525504

  16 Oct 2014; Agostino Sarubbo <ago@gentoo.org> mysql-5.5.40.ebuild:
  Stable for amd64, wrt bug #525504

  15 Oct 2014; Brian Evans <grknight@gentoo.org> -mysql-5.6.20.ebuild,
  mysql-5.5.40.ebuild, mysql-5.6.21.ebuild:
  Drop old; restore mips keyword that was lost in the overlay
