@@ -8,7 +8,6 @@ dev-db/mysql
 dev-db/mariadb
 -->
 <use>
-  <flag name='big-tables'>Make tables contain up to 1.844E+19 rows</flag>
   <flag name='cluster'>Add support for NDB clustering (deprecated)</flag>
   <flag name='community'>Enables the community features from upstream.</flag>
   <flag name='embedded'>Build embedded server (libmysqld)</flag>
@@ -17,10 +16,8 @@ dev-db/mariadb
   <flag name='latin1'>Use LATIN1 encoding instead of UTF8</flag>
   <flag name='max-idx-128'>Raise the max index per table limit from 64 to 128</flag>
   <flag name='minimal'>Install client programs only, no server</flag>
-  <flag name='pbxt'>Add experimental support for PBXT storage engine</flag>
   <flag name='profiling'>Add support for statement profiling (requires USE=community).</flag>
   <flag name="systemtap">Build support for profiling and tracing using <pkg>dev-util/systemtap</pkg></flag>
   <flag name='test'>Install upstream testsuites for end use.</flag>
-  <flag name='xtradb'>Add experimental support for Percona's InnoDB replacement: XtraDB</flag>
 </use>
 </pkgmetadata>
