@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/mysql
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.709 2014/12/04 01:27:44 grknight Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.710 2015/01/07 14:00:55 grknight Exp $
+
+  07 Jan 2015; Brian Evans <grknight@gentoo.org> -mysql-5.1.70.ebuild,
+  -mysql-5.1.73-r1.ebuild, metadata.xml:
+  Drop 5.1 series; Will live on in the mysql overlay
 
 *mysql-5.5.41 (04 Dec 2014)
 *mysql-5.6.22 (04 Dec 2014)
